 * GNUstepOutput: Added a method to InputController to allow a command to
 be executed (programmatically) without making it into the history or messing
 up what the person is currently typing.

 Added support for // to escape normal command handling:
 //dev/hda is cool
 would send
 /dev/hda is cool
 to the channel.

 Fixed autoconnect commands for autoconnected servers.

2005-06-01 Andrew Ruder <aeruder@ksu.edu>
 * GNUstepOutput: Topic inspector did not correctly update
 when someone else applied a new topic.  Fixed several memory leaks
 between interactions with ConnectionController and the ContentControllers.

 Should drop connections correctly when window is closed.  Added a default
 quit message preference and added to General preferences UI.  Added a dealloc
 routine for the StandardContentController class.  Fixed double initialization
 of the UI for QueryViewControllers and ChannelViewControllers.

2004-01-12 Andy Ruder <aeruder at ksu dot edu>
 * Manually applying various attributes to NSTextView subclasses
   since OS X doesn't support custom subclasses on them.
 * Added the emoticon bundle (thanks ludovic)
 * Fixed a memory leak in bundle setup
 * Fixed a weirdness on selection in bundle setup

2004-01-11 Andy Ruder <aeruder at ksu dot edu>
 * Added /ping, /topic to GNUstepOutput
 * Made /join not require the # on the channels
 * DCCSupport (finally) has support for using a specific range of ports and
   setting the block size.  A GNUstepOutput preferences panel was added.

2004-01-10 Andy Ruder <aeruder at ksu dot edu>
 * Bundle Controller had a bug when dragging to bottom row
 * GNUstepOutput will make sure bundle prefs are closed when they are unloaded
 * Worked on making TS compilable on OSX 

2004-01-05 Andy Ruder <aeruder at ksu dot edu>
 * Updated the server list
 * Made the server list realphabetize on startup
 * Moved defaults into external files and into separate bundles
 * Made Highlighting not screw up the preferences button in bundle setup
